[tool.poetry]
name = "pfl-benchmarks"
version = "0.0.0"
description = "Examples, benchmarks and reproducible research implemented in pfl"
authors = ["Apple"]


[tool.poetry.dependencies]
# Use newer python versions at your own risk, they have not been fully tested with `pfl`.
python = ">=3.10,<3.13"
awscli = "^1.32.29"
h5py = "^3.8.0"
multiprocess = ">=0.70.15,<0.71"
tqdm = "^4.63.1"
tensorflow = { version = "2.17.0", optional = true }
tensorflow-probability = { version = "0.24", extras = ["tf"], optional = true }
torch = [
  { version = "2.6.0", source = "torch_cu124", markers = "sys_platform == 'linux'", optional = true },
  { version = "2.6.0", source = "PyPI", markers = "sys_platform == 'darwin'",  optional = true },
]
# https://github.com/pytorch/pytorch/wiki/PyTorch-Versions
torchvision = [
  { version = "0.21.0", source = "torch_cu124", markers = "sys_platform == 'linux'", optional = true },
  { version = "0.21.0", source = "PyPI", markers = "sys_platform == 'darwin'",  optional = true },
]
# Installs pfl from source.
pfl = [
    { path = "../", extras = ["tf"], markers="extra=='tf'", optional = true, develop = true },
    { path = "../", extras = ["pytorch"], markers="extra=='pytorch'", optional = true, develop = true },
    { path = "../", extras = ["mlx"], markers="extra=='mlx' and sys_platform=='darwin'", optional = true, develop = true },
]
pillow = ">=10.2.0"
datasets = "^2.19.1"
# Fixes vulnerability https://github.com/advisories/GHSA-2g68-c3qc-8985
werkzeug = ">=3.0.3"


[tool.poetry.extras]
tf = ["pfl", "tensorflow"]
pytorch = ["pfl", "torchvision", "torch"]
mlx = ["pfl", "mlx"]

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
pytest = "^8.4.2"
pre-commit = "^4.3.0"
pytest-xdist = "^3.8.0"
pytest-lazy-fixtures = "^1.4.0"
mypy = "^1.18.1"
ruff = "^0.13.0"
scikit-learn = "^1.0.2"
yapf = "^0.40.1"

# TODO: these pytorch sources are only needed while pfl is installed from github address.
[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
disable_error_code = "import,union-attr,index,attr-defined,arg-type"
